@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-14T08:27:35Z",
-  "count_outdated" : 415,
-  "uniques_outdated" : 224,
+  "timestamp" : "2022-04-15T01:50:20Z",
+  "count_outdated" : 417,
+  "uniques_outdated" : 225,
   "count" : 430,
   "uniques" : 235,
   "clones" : [
-    {
-      "timestamp": "2022-04-01T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-03T00:00:00Z",
       "count": 6,
