@@ -1,12 +1,7 @@
 {
-  "count": 15,
+  "count": 13,
   "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2022-04-01T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-03T00:00:00Z",
       "count": 6,
