@@ -1,3 +1,9 @@
+2022-04-15T01:50:20Z:
+* notice: last 14d: all unq: 13 6
+* notice: prev accum: outdated-all outdated-unq / all unq: 415 224 / 430 235
+* notice: next accum: outdated-all outdated-unq / all unq: 417 225 / 430 235
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-14T08:27:35Z:
 * notice: last 14d: all unq: 15 6
 * notice: prev accum: outdated-all outdated-unq / all unq: 413 223 / 430 235
